syntax = "proto3";
package wasm_debugger_grpc;

service WasmDebugger {
  rpc LoadModule(LoadRequest) returns (LoadReply);
  rpc RunCode(RunCodeRequest) returns (RunCodeReply);

  rpc GetLocal(GetLocalRequest) returns (GetLocalReply);
  rpc GetCallStack(GetCallStackRequest) returns (GetCallStackReply);
}

message LoadRequest { string file_name = 1; }
message LoadReply {
  Status status = 1;
  optional string error_reason = 2;
}

message RunCodeRequest {
  RunCodeType run_code_type = 1;
}
message RunCodeReply {
  Status status = 1;
  optional string error_reason = 2;
}

message GetLocalRequest { int32 call_stack = 1; }
message GetLocalReply {
  Status status = 1;
  optional string error_reason = 2;
  repeated LocalInfo locals = 3;
}

message GetCallStackRequest {}
message GetCallStackReply {
  Status status = 1;
  optional string error_reason = 2;
  repeated CodePosition stacks = 3;
}


// Helper
enum Status {
  OK = 0;
  NOK = 1;
}

enum RunCodeType {
  START = 0;
  STEP = 1;
}

message CodePosition {
  uint32 func_index = 1;
  uint32 instr_index = 2;
}

message LocalInfo {
  optional string name = 1;
  Value value = 2;
}

message Value {
  oneof Value {
    int32 i32 = 1;
    int64 i64 = 2;
    float f32 = 3;
    double f64 = 4;
  };
}
